# qiniu-cdn-manager

./: .gitignore  Cargo.toml  Makefile  README.md  qiniu-cdn.toml.example
completions/bash/: qiniu-cdn-manager
completions/fish/: qiniu-cdn-manager.fish
completions/zsh/: _qiniu-cdn-manager
filehash/: qiniu-cdn-manager_aarch64-apple-darwin.tar.gz.md5  qiniu-cdn-manager_x86_64-apple-darwin.tar.gz.md5  qiniu-cdn-manager_x86_64-unknown-linux-musl.tar.gz.md5
src/: config.rs  domain.rs  lib.rs  log.rs  main.rs  prefetch.rs  refresh.rs  traffic.rs
src/analysis/: count.rs  hitmiss.rs  isp.rs  mod.rs  status.rs  top.rs
src/utils/: mod.rs  qy_robot.rs  region_isp.rs  token.rs
