[package]
name = "qiniu-cdn-manager"
description = "A CLI to Manage Qiniu CDN."
authors = ["linghaihui <haihuiling2014@gmail.com"]
readme = "README.md"
version = "0.1.1"
license = "MIT"
edition = "2021"
repository = "https://github.com/bujnlc8/qiniu-cdn-manager"
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
clap_complete = "4.5.8"
colored = "2.1.0"
dialoguer = "0.11.0"
flate2 = "1.0.30"
hmac-sha1 = "0.2.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] , default-features = false}
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.120"
tokio = { version = "1", features = ["full"] }
toml = "0.8.14"
unicode-width = "0.1.13"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = true
